week3/day15/aws-vpc-terraform/_initial-pass/nat.tf
resource "aws_eip" "nat" {
  domain = "vpc"

  tags = {
    Name        = "${var.project_name}-eip-nat"
    Environment = var.environment
  }
}

resource "aws_nat_gateway" "main" {
  allocation_id = aws_eip.nat.id
  subnet_id     = aws_subnet.public_1a.id

  tags = {
    Name        = "${var.project_name}-nat-gateway"
    Environment = var.environment
  }
}
